Add button to generate breedbase accession template for missing terms

--- a/static/index.html
+++ b/static/index.html
@@ -527,6 +527,14 @@
             </button>
           </div>
         </div>
+        <div class="d-flex flex-row">
+          <div class="p-2 flex-fill">
+            <button id="download-breedbase-template" type="button" class="btn btn-danger btn-block" data-toggle="tooltip" data-title="Download a breedbase accession upload template containing the search terms that do not have a database match">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path fill="currentColor" d="M15.534 1.36L14.309 0H4.662c-.696 0-.965.516-.965.919v3.63H5.05V1.653c0-.154.13-.284.28-.284h6.903c.152 0 .228.027.228.152v4.82h4.913c.193 0 .268.1.268.246v11.77c0 .246-.1.283-.25.283H5.33a.287.287 0 0 1-.28-.284V17.28H3.706v1.695c-.018.6.302 1.025.956 1.025H18.06c.7 0 .939-.507.939-.969V5.187l-.35-.38zm-1.698.16l.387.434l2.596 2.853l.143.173h-2.653q-.3 0-.38-.1q-.08-.098-.093-.313zm-1.09 9.147h4.577v1.334h-4.578zm0-2.666h4.577v1.333h-4.578zm0 5.333h4.577v1.334h-4.578zM1 5.626v10.667h10.465V5.626zm5.233 6.204l-.64.978h.64V14H3.016l2.334-3.51l-2.068-3.156H5.01L6.234 9.17l1.223-1.836h1.727L7.112 10.49L9.449 14H7.656z"/></svg>
+              Download Breedbase Accession Upload Template for No Matches
+            </button>
+          </div>
+        </div>
         
         <hr />
         
@@ -688,6 +696,7 @@
         $("#download-matches").click(downloadMatches);
         $("#download-no-matches").click(downloadNoMatches);
         $("#download-all").click(downloadAll);
+        $("#download-breedbase-template").click(downloadBreedbaseTemplate);
         $("#matches-return").click(displaySearch);
         $(".btn-match-filter").click(filterSearch);
         $('#info-alert').on('closed.bs.alert', () => {
